# application-template

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: main.rs
